--- a/1.html
+++ b/1.html
@@ -6,10 +6,12 @@
 <title>주식 김민균</title>
 </head>
 <body>
+				<h1>관심기술</h1>
+		   <h3>컴퓨터</h3>
+<li><a href="https://namu.wiki/w/%EC%96%91%EC%9E%90%EC%BB%B4%ED%93%A8%ED%84%B0">양자컴퓨터</a></li>
 
-<h1>관심기술</h1>
- <li><a href = "https://namu.wiki/w/%EC%96%91%EC%9E%90%EC%BB%B4%ED%93%A8%ED%84%B0">양자컴퓨터<a></li>
-
+<li><a href ="https://brownbears.tistory.com/431" >엣지 컴퓨팅</a></li>
+     <h3>해양산업</h3>
 
 </body>
 </html>
